@@ -31,8 +31,8 @@ class RemotePaymentExpressTest < Test::Unit::TestCase
     assert_not_nil response.authorization
   end
 
-  def test_successful_purchase_with_client_info
-    assert response = @gateway.purchase(@amount, @credit_card, @options.merge(:client_info => '192.168.0.1'))
+  def test_successful_purchase_with_ip
+    assert response = @gateway.purchase(@amount, @credit_card, @options.merge(:ip => '192.168.0.1'))
     assert_success response
     assert_equal 'The Transaction was approved', response.message
     assert_not_nil response.authorization
